# rrxio

./: .gitignore  .gitmodules  README.md
rrxio/: CMakeLists.txt  package.xml
rrxio/include/rrxio/: RRxIOFilter.hpp  RRxIONode.hpp  VelocityUpdate.hpp
rrxio/launch/: rrxio_evaluate_rosbag.launch  rrxio_thermal_iros_demo.launch  rrxio_visual_iros_demo.launch
rrxio/launch/configs/: default_params_radar_ego_velocity_estimation.yaml  rrxio.rviz  rrxio_iros_datasets_thermal.info  rrxio_iros_datasets_visual.info
rrxio/python/: evaluate_ground_truth.py  evaluate_iros_datasets.py  odom_to_path.py  plot_states_uncertainty.py
rrxio/src/nodes/: rrxio_node.cpp  rrxio_rosbag_loader.cpp
